Structure of all the pages

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/alfajores.html">Alfajores</a>
-        <a href="recipes/chimichurri.html">Chimichurri</a>
-        <a href="recipes/empanadas.html">Empanadas</a>
+        <ul>
+            <li><a href="recipes/alfajores.html">Alfajores</a></li>
+            <li><a href="recipes/chimichurri.html">Chimichurri</a></li>
+            <li><a href="recipes/empanadas.html">Empanadas</a></li>
+        </ul>
     </body>
 
 </html>
