--- a/recipes/alfajores.html
+++ b/recipes/alfajores.html
@@ -6,6 +6,29 @@
     </head>
     <body>
         <h1>Alfajores</h1>
+        <!--image -->
+
+        <!--Description of the receipt-->
+        <h3>Description</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, veniam at fugiat quod quis nam soluta, dolore non ipsum ullam perferendis, cum reiciendis! Sapiente quos quo laborum dolor debitis molestiae?</p>
+        
+        <!--Unordered list of the ingredients-->
+        <h3>Ingredients</h3>
+        <ul>
+            <li>item 1 </li>
+            <li>item 1 </li>
+            <li>item 1 </li>
+            <li>item 1 </li>
+        </ul>
+
+        <!--Ordered list of the ingredients-->
+        <h3>Steps</h3>
+        <ol>
+            <li>item 1</li>
+            <li>item 1 </li>
+            <li>item 1 </li>
+            <li>item 1 </li>
+        </ol>
 
 
     </body>
