Conforms to FOUNDATION Project: Recipes

--- a/recipes/alfajores.html
+++ b/recipes/alfajores.html
@@ -6,31 +6,41 @@
     </head>
     <body>
         <h1>Alfajores</h1>
-        <!--image -->
+        <!-- image -->
+        <img src="../img/alfajores.jpg" alt="A delicious alfajor" height="300">
 
-        <!--Description of the receipt-->
+        <!-- Description of the receipt -->
         <h3>Description</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, veniam at fugiat quod quis nam soluta, dolore non ipsum ullam perferendis, cum reiciendis! Sapiente quos quo laborum dolor debitis molestiae?</p>
+        <p>This is a traditional cookie that is much loved in most Latin cultures. Even my mother in law says they're the BEST, and that is saying a lot considering she is from Mendoza, Argentina!</p>
         
-        <!--Unordered list of the ingredients-->
+        <!-- Unordered list of the ingredients -->
         <h3>Ingredients</h3>
         <ul>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li>2 ½ cups cornstarch</li>
+            <li>1 ⅔ cups unbleached all-purpose flour</li>
+            <li>2 teaspoons baking powder</li>
+            <li>½ teaspoon baking soda</li>
+            <li>¾ cup white sugar</li>
+            <li>1 cup unsalted butter, softened</li>
+            <li>3 egg yolks</li>
+            <li>½ teaspoon vanilla extract</li>
+            <li>1 teaspoon vanilla rum</li>
+            <li>2 teaspoons lemon zest</li>
+            <li>½ teaspoon lemon extract</li>
+            <li>½ cup unsweetened shredded coconut</li>
+            <li>1 (11.5 ounce) jar dulce de leche</li>
         </ul>
 
-        <!--Ordered list of the ingredients-->
+        <!-- Ordered list of the steps -->
         <h3>Steps</h3>
         <ol>
-            <li>item 1</li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li><strong>Step 1: </strong>Preheat oven to 350 degrees F (175 degrees C). Line baking sheets with parchment paper. Whisk together the flour, cornstarch, baking soda, and baking powder; set aside.</li>
+            <li><strong>Step 2: </strong>Beat the butter and sugar with an electric mixer in a large bowl until light and fluffy. Add the egg yolks one at a time, allowing each yolk to blend into the butter mixture before adding the next. Beat in the vanilla rum, vanilla extract, lemon extract, and lemon zest with the last egg. Gently fold in the flour mixture with a spoon, making a crumbly dough. When the dough becomes cohesive enough, press it together into a ball with your hands. Wrap with plastic wrap and chill for 30 minutes to 1 hour.</li>
+            <li><strong>Step 3: </strong>Roll out the dough, using as little flour as possible, about 1/4 inch thick. The dough will have an unusual consistency. Cut with a small round cookie cutter. Continue pressing the dough together, rolling it out, and cutting until you have used it all. Place cookies 1/2 inch apart on the prepared cookie sheets.</li>
+            <li><strong>Step 4: </strong>Bake in the preheated oven until set but not browned, 7 to 10 minutes. Remove the cookies immediately to cool on a wire rack.</li>
+            <li><strong>Step 5: </strong>Spread the underside of a cooled cookie with a teaspoon of dulce de leche, then sandwich together with another cookie until the caramel oozes out the sides. Roll the sides in the shredded coconut.</li>
         </ol>
-
-
+        <p></p>
+        <a href="../index.html">Back</a>
     </body>
-
 </html>
