--- a/recipes/chimichurri.html
+++ b/recipes/chimichurri.html
@@ -6,31 +6,33 @@
     </head>
     <body>
         <h1>Chimichurri</h1>
-        <!--image -->
+        <!-- image -->
+        <img src="../img/chimichurri.jpg" alt="Delicious chimichurri" height="300">
 
-        <!--Description of the receipt-->
+        <!-- Description of the receipt -->
         <h3>Description</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, veniam at fugiat quod quis nam soluta, dolore non ipsum ullam perferendis, cum reiciendis! Sapiente quos quo laborum dolor debitis molestiae?</p>
+        <p>This famous Argentinian chimichurri sauce is perfect for any grilled chicken, meat, or fish. My catering customers love it on garlic crostini with grilled flank steak slices.</p>
         
-        <!--Unordered list of the ingredients-->
+        <!-- Unordered list of the ingredients -->
         <h3>Ingredients</h3>
         <ul>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li>1 cup fresh parsley</li>
+            <li>¾ cup extra virgin olive oil</li>
+            <li>3 tablespoons red wine vinegar</li>
+            <li>2 tablespoons dried oregano</li>
+            <li>2 teaspoons ground cumin</li>
+            <li>1 ½ teaspoons minced garlic</li>
+            <li>1 ½ teaspoons pepper sauce (such as Frank's Red Hot®)</li>
+            <li>1 teaspoon salt</li>
         </ul>
 
-        <!--Ordered list of the ingredients-->
+        <!-- Ordered list of the ingredients -->
         <h3>Steps</h3>
         <ol>
-            <li>item 1</li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li><strong>Step 1: </strong>Combine parsley, oil, vinegar, oregano, cumin, garlic, hot sauce, and salt in a blender or food processor.</li>
+            <li><strong>Step 2: </strong>Mix on medium speed until ingredients are evenly blended, about 10 seconds.</li>
         </ol>
-
-
+        <p></p>
+        <a href="../index.html">Back</a>
     </body>
-
 </html>
