--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -6,31 +6,45 @@
     </head>
     <body>
         <h1>Empanadas</h1>
-        <!--image -->
+        <!-- image -->
+        <img src="../img/empanadas.jpg" alt="Delicious empanadas" height="300">
 
-        <!--Description of the receipt-->
+        <!-- Description of the receipt -->
         <h3>Description</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, veniam at fugiat quod quis nam soluta, dolore non ipsum ullam perferendis, cum reiciendis! Sapiente quos quo laborum dolor debitis molestiae?</p>
+        <p>My original version of the Argentinean recipe for empanadas. Rich and delicious. Any meat can be used for this recipe, just be sure to cut it up into tiny pieces.</p>
         
-        <!--Unordered list of the ingredients-->
+        <!-- Unordered list of the ingredients -->
         <h3>Ingredients</h3>
         <ul>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li>1 pound lean ground beef</li>
+            <li>½ cup shortening</li>
+            <li>2 medium onions, chopped</li>
+            <li>2 teaspoons Hungarian sweet paprika</li>
+            <li>¾ teaspoon hot paprika</li>
+            <li>½ teaspoon crushed red pepper flakes</li>
+            <li>salt to taste</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>1 tablespoon distilled white vinegar</li>
+            <li>¼ cup raisins</li>
+            <li>2 large hard-cooked eggs, chopped</li>
+            <li>½ cup pitted green olives, chopped</li>
+            <li>1 (17.5 ounce) package frozen puff pastry sheets, thawed</li>
+            <li>1 large egg, beaten (Optional)</li>
         </ul>
 
-        <!--Ordered list of the ingredients-->
+        <!-- Ordered list of the ingredients -->
         <h3>Steps</h3>
         <ol>
-            <li>item 1</li>
-            <li>item 1 </li>
-            <li>item 1 </li>
-            <li>item 1 </li>
+            <li><strong>Step 1: </strong>Spread ground beef into a large sieve. Slowly pour boiling water over top for partial cooking. Let drain and cool.</li>
+            <li><strong>Step 2: </strong>Meanwhile, melt shortening in a skillet over medium heat. Add onions; cook and stir until just before they begin to turn golden, 12 to 15 minutes. Remove from the heat and stir in sweet paprika, hot paprika, and red pepper flakes; season with salt.</li>
+            <li><strong>Step 3: </strong>Transfer cooled beef to a bowl. Mix in vinegar and cumin and season with salt. Mix in onions until well combined. Transfer to a large plate to cool and harden, about 10 minutes.</li>
+            <li><strong>Step 4: </strong>Preheat the oven to 350 degrees F (180 degrees C). Line a baking sheet with parchment paper.</li>
+            <li><strong>Step 5: </strong>Cut puff pastry dough into 10 circles. Place a spoonful meat mixture onto each round, making sure at least 1/2 inch of the outer pastry edge stays clean and dry. Add olives, raisins, and hard-cooked eggs to each round. Slightly wet the edges of pastry rounds, fold in half into half-moons, and press the edges together. Seal empanadas by twisting and curling dough together between your thumb and index finger, adding pressure before releasing each pinch and moving on to the next one.</li>
+            <li><strong>Step 6: </strong>Place empanadas onto the prepared baking sheet. Prick each empanada with a fork near the curled edge to allow steam to escape during baking. Brush empanadas with beaten egg.</li>
+            <li><strong>Step 7: </strong>Bake in the preheated oven until golden, 20 to 30 minutes.</li>
         </ol>
-
-
+        <p></p>
+        <a href="../index.html">Back</a>
     </body>
 
 </html>
